--- a/index.html
+++ b/index.html
@@ -141,9 +141,11 @@
 							</div>
 						  </div>
                           <div class="g7">
-							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="fa fa-twitter-square"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="https://www.visualstudio.com/" target="_blank">
+									<img src="http://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Microsoft-Visual-Studio-icon.png" alt=""></a>
+							</div>
+						  </div>
                           <div class="g7">
 							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
                               <i class="fa fa-github-square"></i></a>
