--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						  <div class="g7">
 							<div class="image-small">
 								<a href="http://unity3d.com/5" target="_blank">
-									<img src="https://pbs.twimg.com/profile_images/519835956900134913/gAHKqtIM_normal.jpeg" alt=""></a>
+									<img src="https://upload.wikimedia.org/wikipedia/ru/a/a3/Unity_Logo.png" alt=""></a>
                             </div>
 						  </div>
 						  <div class="g7">
