--- a/index.html
+++ b/index.html
@@ -107,25 +107,35 @@
                         <div class="break"></div>
                         <div class="contact-info">
                           <div class="g7">
-							<a href="mailto:dvdjoh@gmail.com" target="_blank">
-                              <i class="fa fa-envelope-square"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="mailto:dvdjoh@gmail.com" target="_blank">
+									<img src="https://www.google.com/edu/training/images/tools/gmail.png" alt=""></a>
+                            </div>
+						  </div>
                           <div class="g7">
-							<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
-                              <i class="fa fa-facebook-official"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
+									<img src="https://g.twimg.com/Twitter_logo_blue.png" alt=""></a>
+                            </div>
+						  </div>
                           <div class="g7">
-							<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-                              <i class="fa fa-twitter-square"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="https://github.com/nuts4nuts4nuts" target="_blank">
+									<img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt=""></a>
+                            </div>
+						  </div>
                           <div class="g7">
-							<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-                              <i class="fa fa-github-square"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
+									<img src="http://www.webwatcher.com/images/facebook_img.jpg" alt=""></a>
+                            </div>
+						  </div>
 						  <div class="g7">
-                            <a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
-							  <i class="fa fa-linkedin-square"></i></a>
-                          </div>
+							<div class="image-small">
+								<a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
+									<img src="http://www.foodbanknyc.org/_gfx_/icon-linkedin.png" alt=""></a>
+                            </div>
+						  </div>
                         </div>
 						<div class="contact-info-right">
 						  <div class="g7">
