--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-									<img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt=""></a>
+									<img src="http://mohsen.alimomeni.org/static/github.png" alt=""></a>
                             </div>
 						  </div>
                           <div class="g7">
