email and twitter

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="mailto:dvdjoh@gmail.com" target="_blank">
-									<img src="https://www.google.com/edu/training/images/tools/gmail.png" alt=""></a>
+									<img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt=""></a>
                             </div>
 						  </div>
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-									<img src="https://g.twimg.com/Twitter_logo_blue.png" alt=""></a>
+									<img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_circle_color-512.png" alt=""></a>
                             </div>
 						  </div>
                           <div class="g7">
