--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="mailto:dvdjoh@gmail.com" target="_blank">
-									<img src="http://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt=""></a>
+									<img src="http://developer.blackberry.com/html5/files/documentation/v1_0/images/email_icon_suggestions_grid.png" alt=""></a>
                             </div>
 						  </div>
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="https://twitter.com/nuts4nuts4nuts" target="_blank">
-									<img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_circle_color-512.png" alt=""></a>
+									<img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/twitter_square-512.png" alt=""></a>
                             </div>
 						  </div>
                           <div class="g7">
