--- a/index.html
+++ b/index.html
@@ -273,6 +273,9 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                     </p>
                                 </li>
                             </ul>
+							<h4>
+								References available on request.
+							</h4>
                         </div>
                         <div class="g1">
                             <div class="sidebar">
