--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                                 </li>
                             </ul>
 							<a>
-								<h5>
+								<h5 align="center">
 									References available on request.
 								</h5>
 							</a>
