--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I have passion for all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
+                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I am passionate about all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
                                 </p>
                             </div>
                         </div>
@@ -160,6 +160,12 @@
 							<div class="image-small-right">
 								<a href="http://git-scm.com/" target="_blank">
 									<img src="http://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt=""></a>
+							</div>
+						  </div>
+						  <div class="g7">
+							<div class="image-small-right">
+								<a href="http://csharp.net/" target="_blank">
+									<img src="http://altu.me/assets/images/cs-logo.png" alt=""></a>
 							</div>
 						  </div>
 						  <div class="g7">
