making csharp icon bigger

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 						  <div class="g7">
 							<div class="image-small-right">
 								<a href="http://csharp.net/" target="_blank">
-									<img src="http://altu.me/assets/images/cs-logo.png" alt=""></a>
+									<img src="http://i.imgur.com/XpNb82p.png" alt=""></a>
 							</div>
 						  </div>
 						  <div class="g7">
