--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Champlain College
+                                        Champlain College (University Level)
                                     </h5><span class="label label-success">2012-2016</span>
                                     <p>
                                         Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
