changed resume to match portfolio and added download link

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                         Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
                                         Minoring in Mathematics.<br>
                                         GPA: 3.734<br>
-                                        President's List, one semester, Dean's list three semesters<br>
+                                        President's List one semester, Dean's list three semesters<br>
                                         Trustee Scholar<br>
                                         Inspiration Scholar<br>
                                         Recipient of the Mt. Mansfield TV Award
@@ -207,29 +207,29 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Rigid Motors
+					Infection
                                     </h5>
                                     <p>
-				    Worked with a designer, producer, and artist over four weeks to make a mobile puzzle-platformer in Flash.<br><br>
-This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
-                                   </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Apriori Algorithm
-                                    </h5>
-                                    <p>
-				    Worked with two other programmers to develop an implementation of the apriori algorithm for large data sets. Focused on optimizing for time at the cost of memory.<br><br>
-This project taught me an incredibly valuable lesson: always communicate. We were expected to work on the project over spring break, but as soon as I got home my computer died. I was focused on getting it back in working order, and forgot to communicate my dilemma to my teammates. Two days later, I got my computer running and told the team what happened, but the time was still gone. The project got finished; it just took some extra stress and train-programming. From then on I’ve made sure to inform my team at the first sign of any sizable problem.
+					Working with a designer, producer, artist, and another programmer to make a networked strategy game in Unity 4.6.<br><br>
+					In developing Infection I have learned so much about user experience. A videogame must teach the player how to play, and that is no small task. Throughout the whole production cycle we have been meticulous about making everything clear to the player. We have worked very hard to make sure that every action has ample sign and feedback..
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Batgai-0
+                                        Rigid Motors
                                     </h5>
                                     <p>
-				    Worked alone on an arena shoot ‘em up for PC and Xbox 360. Implemented many techniques of 2d graphics programming, including parallax scrolling, a particle system, and pixel shaders in HLSL.<br><br>
-				    This project introduced me to the creativity of graphics programming. Though the techniques implemented were very simple, it gave me a taste of the joy of turning math into beauty. There are many facets to creating a great game, but the one which strikes us most immediately and frequently is the visual aesthetic. This project made me realize that graphics programming beautifully combines two of my favorite things: math and art.
+					Worked with a designer, producer, and artist over four weeks to make a mobile puzzle-platformer in Flash.<br><br>
+					This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
+                                   </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Vicious Orb
+                                    </h5>
+                                    <p>
+					Working with an artist to make a competitive local multiplayer game in Unity 4.6.<br><br>
+					This project has let me experiment a lot with satisfaction. There is a lot of talk these days about game feel, or friction; this is my platform for learning about it. I have tried to make every piece of feedback react to the state of the game.
                                     </p>
                                 </li>
                                 <li>
@@ -285,6 +285,10 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                         </div>
                         <div class="g1">
                             <div class="sidebar">
+                                <h5>
+					Download: <a href="https://www.dropbox.com/s/gjlq0u9o8m7a12l/DavidJohnstonResume.docx?dl=1">Doc</a>
+                                </h5>
+				<div class="break"></div>
                                 <h3>
                                     Skills
                                 </h3>
@@ -332,14 +336,14 @@ This project taught me an incredibly valuable lesson: always communicate. We wer
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
-								<a href="#rigidmotors" class="btn btn-info">
-									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
+								<a href="#infection" class="btn btn-success">
+									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g8">
                             <div class="image">
-								<a href="#infection" class="btn btn-success">
-									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
+								<a href="#rigidmotors" class="btn btn-info">
+									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g5">
