--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <div class="g1">
                             <div class="sidebar">
                                 <h5>
-					Download: <a href="https://www.dropbox.com/s/gjlq0u9o8m7a12l/DavidJohnstonResume.docx?dl=1">Doc</a>
+					<a href="https://www.dropbox.com/s/gjlq0u9o8m7a12l/DavidJohnstonResume.docx?dl=1">Download</a>
                                 </h5>
 				<div class="break"></div>
                                 <h3>
