--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
                     <section class="clearfix">
                         <div class="g5">
                             <div class="image">
-								<a href="#infection" class="btn btn-success">
+								<a href="#infection" class="btn btn-info">
 									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g8">
                             <div class="image">
-								<a href="#rigidmotors" class="btn btn-info">
+								<a href="#rigidmotors" class="btn btn-success">
 									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
                             </div>
                         </div>
