Edited GPA and list info, updated work experience.

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
                                     <p>
                                         Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
                                         Minoring in Mathematics.<br>
-                                        GPA: 3.734<br>
-                                        President's List one semester, Dean's list three semesters<br>
+                                        GPA: 3.755<br>
+                                        President's List one semester, Dean's list four semesters<br>
                                         Trustee Scholar<br>
                                         Inspiration Scholar<br>
                                         Recipient of the Mt. Mansfield TV Award
@@ -248,34 +248,34 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Study-Abroad Blogger
-                                    </h5><span class="label label-success">Jan 2015-April 2015</span>
+                                        Programming Tutor / TA &mdash Champlain College
+                                    </h5><span class="label label-success">Sept 2013-April 2014 & Sept 2015-Present</span>
+                                    <p>
+                                        Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College. In the fall 2015 semester, assisted a professor with her section of Introduction to Programming, grading assignments and helping students one-to-one.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Gameplay Programmer &mdash Tuque Games
+                                    </h5><span class="label label-info"> May 2015-August 2015</span>
+                                    <p>
+                                        Worked on a team of four on an unanounced UE4 roguelike shooter. Worked closesly with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Study-Abroad Blogger &mdash Champlain College
+                                    </h5><span class="label label-info">Jan 2015-April 2015</span>
                                     <p>
                                         Writing for Champlain College's study-abroad blog about my time in Montreal, visiting game studios, attempting to learn French, and exploring the city.
                                     </p>
                                 </li>
                                 <li>
                                     <h5>
-                                        Programming Tutor
-                                    </h5><span class="label label-info">Sept 2013-April 2014</span>
-                                    <p>
-                                        Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Hiring Committee Member
+                                        Hiring Committee Member &mdash Brooklyn Free School
                                     </h5><span class="label label-info">Anually, Spring 2009-2012</span>
                                     <p>
                                         Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Governance  Committee Member
-                                    </h5><span class="label label-info">Sept 2011-June 2012</span>
-                                    <p>
-                                        Served on this newly formed subcommittee of the Board of Trustees at the Brooklyn Free School, which was charged with reviewing and revising the function of the Board of Trustees and the manner in which the school is governed.
                                     </p>
                                 </li>
                             </ul>
