Change em-dashes to en-dashes, shorten some text.

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Programming Tutor / TA &mdash; Champlain College
+                                        Tutor / TA &ndash; Champlain College
                                     </h5><span class="label label-success">Sept 2013-April 2014 & Sept 2015-Present</span>
                                     <p>
                                         Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College. In the fall 2015 semester, assisted a professor with her section of Introduction to Programming, grading assignments and helping students one-to-one.
@@ -256,7 +256,7 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Gameplay Programmer &mdash; Tuque Games
+                                        Gameplay Programmer &ndash; Tuque Games
                                     </h5><span class="label label-info"> May 2015-August 2015</span>
                                     <p>
                                         Worked on a team of four on an unanounced UE4 roguelike shooter. Worked closesly with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
@@ -264,7 +264,7 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Study-Abroad Blogger &mdash; Champlain College
+                                        Study-Abroad Blogger &ndash; Champlain College
                                     </h5><span class="label label-info">Jan 2015-April 2015</span>
                                     <p>
                                         Writing for Champlain College's study-abroad blog about my time in Montreal, visiting game studios, attempting to learn French, and exploring the city.
@@ -272,7 +272,7 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Hiring Committee Member &mdash; Brooklyn Free School
+                                        Hiring Committee Member &ndash; Brooklyn Free School
                                     </h5><span class="label label-info">Anually, Spring 2009-2012</span>
                                     <p>
                                         Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
