--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 <li>
                                     <h5>
                                         Hiring Committee Member &ndash; Brooklyn Free School
-                                    </h5><span class="label label-info">Anually, Spring 2009-2012</span>
+                                    </h5><span class="label label-info">Each Spring 2009-2012</span>
                                     <p>
                                         Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
                                     </p>
