Butcher the hiring committee experience in resume

--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Hiring Committee Member &ndash; Brooklyn Free School
-                                    </h5><span class="label label-info">Each Spring 2009-2012</span>
+                                        Hiring Committee &ndash; Brooklyn Free School
+                                    </h5><span class="label label-info">Anually, Spring 2009-2012</span>
                                     <p>
                                         Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
                                     </p>
