--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                     <span style="width: 66.6%"><span>Unity</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 75"><span>Git/SVN/Perforce</span></span>
+                                    <span style="width: 75%"><span>Git/SVN/Perforce</span></span>
                                 </div>
                                 <div class="meter sunflower">
                                     <span style="width: 80%"><span>VIM</span></span>
