--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<a href="http://unity3d.com/5" target="_blank">
 									<img src="https://upload.wikimedia.org/wikipedia/ru/a/a3/Unity_Logo.png" alt=""></a>
 							</div>
-						  </div>
+						  </div>/
                         </div>
                     </section><!-- content -->
                 </div>
@@ -207,10 +207,19 @@
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-					Infection
+                                        Ripples
                                     </h5>
                                     <p>
-					Working with a designer, producer, artist, and another programmer to make a networked strategy game in Unity 4.6.<br><br>
+        	        Working with two designers, three producers, an artist, and two other programmers to make an elegant, ambient, stylish action game in Unity 5.<br><br>
+                    The team of Ripples came together in the mutual desire to make a stylish, polished game by the end of the year. This has been the culmination of our team's collective experience with action games, Unity, and friction in games. We started the game with half of the team in the first semester of the year, and have expanded to the current size over Thanksgiving week.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+					                    Infection
+                                    </h5>
+                                    <p>
+					Worked with a designer, producer, artist, and another programmer to make a networked strategy game in Unity 4.6.<br><br>
 					In developing Infection I have learned so much about user experience. A videogame must teach the player how to play, and that is no small task. Throughout the whole production cycle we have been meticulous about making everything clear to the player. We have worked very hard to make sure that every action has ample sign and feedback..
                                     </p>
                                 </li>
@@ -230,15 +239,6 @@
                                     <p>
 					Working with an artist to make a competitive local multiplayer game in Unity 4.6.<br><br>
 					This project has let me experiment a lot with satisfaction. There is a lot of talk these days about game feel, or friction; this is my platform for learning about it. I have tried to make every piece of feedback react to the state of the game.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        MOMA Teens One Button Arcade
-                                    </h5>
-                                    <p>
-				    Worked with a team to create an arcade cabinet for a one button game (Gamma IV, by Cactus).<br><br>
-                                    This was the first project that really made me think about controls and presentation when it comes to videogames. We already knew what kind of game we were working with, but we had to create an arcade cabinet that would both mesh well with the existing systems of the game as well as attract people to play. It was a lot of fun getting to create a unique presentation for a game, and showing our work at the Museum of Modern Art, in New York City.
                                     </p>
                                 </li>
                             </ul>
@@ -398,11 +398,11 @@ For the controls of Rigid Motors, we wanted to keep it simple. The team all agre
 				Infection
                             </h1>
 			    <p>
-Infection is a current project that I am working on with an <a href="http://www.nickcomeau.com">artist</a>, producer, designer, and programmer. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
+Infection was my junior production project that I was working on with an <a href="http://www.nickcomeau.com">artist</a>, producer, designer, and programmer. It's a two player asymmetrical abstract strategy game, with drafting. One player plays as human immune system cells, and one player plays as invasive agents, such as bacteria and viruses. Each team has five pieces, which all have unique abilities. In the first stage, players snake-draft three pieces, and place them in their starting zones. Then they are given two low power pieces (like pawns), and they start the tactics stage where they fight over the board. The immune cells' goal is to wipe out the invaders, while the invaders' goal is to infect a certain percentage of the board.
 </p><h6>
 Teaching the Player
 </h6><div class="break"></div><p>
-Working on infection has taught me a great deal about presenting information to the player. We are trying to make an elegant abstract strategy game, and in doing so we are focusing on making every bit of information clear, yet inconspicuous. We have worked a lot on non-textual cues. For instance, we repeatedly found in testing that players were having problems knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. At this point, just about everything related to a player lights up when it's their turn, and pieces have two different effects indicating that they can move. Players are starting to get the message. The game still has a long way to go, but it is shaping up nicely so far.
+Working on infection taught me a great deal about presenting information to the player. We were trying to make an elegant abstract strategy game, and in doing so we focused on making every bit of information clear, yet inconspicuous. We worked a lot on non-textual cues. For instance, we repeatedly found in testing that players were having problems knowing whose turn it was, and which pieces could move. We didn't want to throw around popups every second saying exactly what was happening, but we did want it to be clear. In the final form of the game, just about everything related to each player lights up when it's their turn, and pieces have two different effects indicating that they can move. By our final presentation, players were starting to get the message.
 			    </p>
                         </div>
                     </section>
