Cleaning ripples things

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     	<div class="g5">
                             <div class="image">
 								<a href="#ripples" class="btn btn-default">
-									<img src="http://i.imgur.com/HH4sUd5.png" alt=""></a>
+									<img src="http://i.imgur.com/trXzbUA.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g8">
@@ -408,7 +408,7 @@ Working on infection taught me a great deal about presenting information to the 
                     </section>
                 </div>
               <!-- End Infection Page -->
-              <!-- MOMA Page -->
+              <!-- Ripples Page -->
                 <div id="ripples">
                     <section class="clearfix">
                         <div class="g3">
@@ -428,15 +428,9 @@ Chill Out and Freak Out
 In developing Ripples, we discovered that there are two distinct types of players that are attracted to the game. The first type of player, who most of the developers identify with, wants to have an intense action game experience. This was our initial goal in concepting, prototyping, and developing Ripples. The second type of player, who we didn't expect at all, wants to chill out with the game, get in the zone, and relax with the sweet tunes. Though we weren't designing the game for this purpose, we realized that Ripples really lends itself to this type of experience through its minmal, engaging graphics and stylish music. We did not anticipate this duality in the audience of Ripples, but ever since we found it we have fought to keep it. We have done this through careful balance and a focus on the aesthetics of the game.
 			    </p>
                         </div>
-                        <div class="g6">
-                            <div class="image">
-                                <img src="http://i.imgur.com/T8lSmmo.png" alt="">
-                            </div>
-                        </div>
-
                     </section>
                 </div>
-              <!-- End MOMA Page -->
+              <!-- End Ripples Page -->
               <!-- Vicious Orb Page -->
                 <div id="viciousorb">
                     <section class="clearfix">
