--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<a href="http://unity3d.com/5" target="_blank">
 									<img src="https://upload.wikimedia.org/wikipedia/ru/a/a3/Unity_Logo.png" alt=""></a>
 							</div>
-						  </div>/
+						  </div>
                         </div>
                     </section><!-- content -->
                 </div>
@@ -337,7 +337,7 @@
                     	<div class="g5">
                             <div class="image">
 								<a href="#ripples" class="btn btn-default">
-									<img src="http://i.imgur.com/trXzbUA.png" alt=""></a>
+									<img src="http://i.imgur.com/l9DRdwW.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g8">
