--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 							<div class="image-small-left">
 								<a href="https://github.com/nuts4nuts4nuts" target="_blank">
 									<img src="http://mohsen.alimomeni.org/static/github.png" alt=""></a>
-                            </div>
-						  </div>
+                          	</div>
+			  </div>
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
@@ -134,9 +134,8 @@
 							<div class="image-small-left">
 								<a href="https://www.linkedin.com/pub/david-johnston/9b/574/963" target="_blank">
 									<img src="http://www.foodbanknyc.org/_gfx_/icon-linkedin.png" alt=""></a>
-                            </div>
-						  </div>
-                        </div>
+                        				</div>
+                				</div>
 						<div class="contact-info-right">
 						  <div class="g7">
 							<div class="image-small-right">
@@ -337,7 +336,7 @@
                     	<div class="g5">
                             <div class="image">
 								<a href="#ripples" class="btn btn-default">
-									<img src="http://i.imgur.com/l9DRdwW.png" alt=""></a>
+									<img src="http://i.imgur.com/xyzk88t.png" alt=""></a>
                             </div>
                         </div>
                         <div class="g8">
