--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 									<img src="http://www.foodbanknyc.org/_gfx_/icon-linkedin.png" alt=""></a>
                         				</div>
                 				</div>
+                				</div>
 						<div class="contact-info-right">
 						  <div class="g7">
 							<div class="image-small-right">
