new github icon

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                           <div class="g7">
 							<div class="image-small-left">
 								<a href="https://github.com/nuts4nuts4nuts" target="_blank">
-									<img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt="Github"></a>
+									<img src="http://orig03.deviantart.net/6873/f/2013/031/c/d/github_by_ovilia1024-d5teqdd.png" alt="Github"></a>
                           	</div>
 			  </div>
                           <div class="g7">
