--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                         Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
                                         Minoring in Mathematics.<br>
                                         GPA: 3.755<br>
-                                        President's List one semester, Dean's list four semesters<br>
+                                        President's List one semester, Dean's list five semesters<br>
                                         Trustee Scholar<br>
                                         Inspiration Scholar<br>
                                         Recipient of the Mt. Mansfield TV Award
