update resume Ripples description

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     </h5>
                                     <p>
         	        Working with two designers, three producers, an artist, and two other programmers to make an elegant, ambient, stylish action game in Unity 5.<br><br>
-                    The team of Ripples came together in the mutual desire to make a stylish, polished game by the end of the year. This has been the culmination of our team's collective experience with action games, Unity, and friction in games. We started the game with half of the team in the first semester of the year, and have expanded to the current size over Thanksgiving week.
+                    The team of Ripples came together in the mutual desire to make a stylish, polished game by the end of the year. This has been the culmination of our team's collective experience with action games, Unity, and friction in games through our time at Champlain College. We started the game with half of the team in the first semester of the year, and have expanded to the current size for the second semester.
                                     </p>
                                 </li>
                                 <li>
