Update infection description in resume

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     </h5>
                                     <p>
 					Working with a designer, producer, artist, and another programmer to make a networked strategy game in Unity 4.6.<br><br>
-					In developing Infection I have learned so much about user experience. A videogame must teach the player how to play, and that is no small task. Throughout the whole production cycle we have been meticulous about making everything clear to the player. We have worked very hard to make sure that every action has ample sign and feedback..
+					In developing Infection I learned so much about user experience. A videogame must teach the player how to play, and that is no small task. Throughout the whole production cycle we focused on being meticulous about making everything clear to the player. We worked very hard to make sure that every action has ample sign and feedback.
                                     </p>
                                 </li>
                                 <li>
