Update tutoring info for this year

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 <li>
                                     <h5>
                                         Tutor / TA &ndash; Champlain College
-                                    </h5><span class="label label-success">Sept 2013-April 2014 & Sept 2015-Present</span>
+                                    </h5><span class="label label-success">Sept 2013-April 2014 & Sept 2015-Dec 2015</span>
                                     <p>
                                         Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College. In the fall 2015 semester, assisted a professor with her section of Introduction to Programming, grading assignments and helping students one-to-one.
                                     </p>
