--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                 <li class='tab' style="display: none;">
                   <a href="#viciousorb"><i class="fa fa-heart"></i><span> Vicious Orb</span></a>
                 </li>
+                <li class='tab' style="display: none;">
+                  <a href="#businesscardgame"><i class="fa fa-heart"></i><span> Business Card Game</span></a>
+                </li>
+                <li class='tab' style="display: none;">
+                  <a href="#raymarchingprimitives"><i class="fa fa-heart"></i><span> Raymarching Primitives</span></a>
+                </li>
             </ul>
 	  <!-- End Tab List -->
 	    <div id="tab-data-wrap">
@@ -334,27 +340,39 @@
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
                     <section class="clearfix">
-                    	<div class="g5">
+                    	<div class="portfolioImage">
                             <div class="image">
-								<a href="#ripples" class="btn btn-default">
+								<a href="#ripples" class="btn btn-info">
 									<img src="http://i.imgur.com/xyzk88t.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="g8">
+                        <div class="portfolioImage">
                             <div class="image">
-								<a href="#infection" class="btn btn-info">
+								<a href="#infection" class="btn btn-primary">
 									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="g5">
+                        <div class="portfolioImage">
                             <div class="image">
 								<a href="#rigidmotors" class="btn btn-success">
 									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
                             </div>
                         </div>
-                        <div class="g8">
+                        <div class="portfolioImage">
                             <div class="image">
 								<a href="#viciousorb" class="btn btn-primary">
+									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="portfolioImage">
+                            <div class="image">
+								<a href="#businesscardgame" class="btn btn-success">
+									<img src="http://i.imgur.com/fFCfXU5.jpg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="portfolioImage">
+                            <div class="image">
+								<a href="#raymarchingprimitives" class="btn btn-info">
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
@@ -375,11 +393,11 @@
 				Rigid Motors
                             </h1>
 			    <p>
-Rigid Motors is a mobile game I worked on with an <a href="http://www.walterweaver.com">artist</a>, producer, and two designers. It is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot minions, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later minions. The odds of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform. 
+Rigid Motors is a mobile game I worked on with an <a href="http://www.walterweaver.com">artist</a>, producer, and two designers. It is a mobile puzzle-platformer game made using Flash with the Citrus engine. In Rigid Motors you play as an infinite supply of robot minions, trying to find treasure in ancient catacombs. The catacombs are treacherous, filled with spikes, lava, and all manner of other nasty traps. Fortunately, when one robot dies it leaves its corpse behind to be used as a platform for later minions. The odds of any given robot getting the treasure are small, but together they will prevail.<br><br> This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that felt good, and with the artist to get around the graphical limitations of the platform.
 </p><h6>
 Controls
 </h6><div class="break"></div><p>
-For the controls of Rigid Motors, we wanted to keep it simple. The team all agreed that mobile games work best when they use simple touch controls. That being said, we wanted to provide deep platforming gameplay. We decided that the game worked best as a sort of finite-runner. We would keep the level format, but we would have the robots constantly run. This let us trim down the control scheme. In the final implementation, the controls are simply tap to jump (when the robot is against a wall it does a wall jump and turns around) and swipe to self-destruct. We found that self-destruction was a crucial mechanic in letting the player forge a unique path through each level. 
+For the controls of Rigid Motors, we wanted to keep it simple. The team all agreed that mobile games work best when they use simple touch controls. That being said, we wanted to provide deep platforming gameplay. We decided that the game worked best as a sort of finite-runner. We would keep the level format, but we would have the robots constantly run. This let us trim down the control scheme. In the final implementation, the controls are simply tap to jump (when the robot is against a wall it does a wall jump and turns around) and swipe to self-destruct. We found that self-destruction was a crucial mechanic in letting the player forge a unique path through each level.
 				</p>
                         </div>
                     </section>
@@ -454,6 +472,52 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
                     </section>
                 </div>
               <!-- End Vicious Orb Page -->
+              <!-- Business Card Game Page -->
+                <div id="businesscardgame">
+                    <section class="clearfix">
+                        <div class="g6">
+                            <div class="image">
+                                <img src="http://i.imgur.com/9ASGcxk.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="g4">
+                        <h1>
+				Business Card Game
+                            </h1>
+			    <p>
+Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+</p><h6>
+Making it Juicy
+</h6><div class="break"></div><p>
+Vicious Orb is meant to be a very visceral game. It is a competitive action game, I want it to feel good. To do that, I have been spending a lot of time tweaking the feedback of the game. My goal is to make it so that every graphical and aural effect is scaled to the tension of the current game state. I've learned a lot in doing this. Getting to be the designer of the game as well as programming it has made me think more about what designers really need to make the games they want to make. This has also encouraged me to work on more small projects. I have been working on this in my spare time for a little while now, but I finished the first prototype in a few hours.
+			    </p>
+                        </div>
+                    </section>
+                </div>
+              <!-- End Business Card Game Page -->
+              <!-- Raymarching Shader Page -->
+                <div id="raymarchingprimitives">
+                    <section class="clearfix">
+                        <div class="g6">
+                            <div class="image">
+                                <img src="http://i.imgur.com/MJ6hmOk.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="g4">
+                        <h1>
+				Raymarching Primitives
+                            </h1>
+			    <p>
+Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+</p><h6>
+Making it Juicy
+</h6><div class="break"></div><p>
+Vicious Orb is meant to be a very visceral game. It is a competitive action game, I want it to feel good. To do that, I have been spending a lot of time tweaking the feedback of the game. My goal is to make it so that every graphical and aural effect is scaled to the tension of the current game state. I've learned a lot in doing this. Getting to be the designer of the game as well as programming it has made me think more about what designers really need to make the games they want to make. This has also encouraged me to work on more small projects. I have been working on this in my spare time for a little while now, but I finished the first prototype in a few hours.
+			    </p>
+                        </div>
+                    </section>
+                </div>
+              <!-- End Raymarching Primitives Page -->
               <!-- End Project Pages -->
               <!-- Contact Tab Data -->
                 <div id="contact">
@@ -465,7 +529,7 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
                             </div>
                             <div class="sny-icon-content">
                               <h4>Where am I?</h4>
-                              <p>Right now I'm in Montreal, Canada!</p>
+                              <p>Right now I'm in Burlington, VT!</p>
                             </div>
                          </div>
                        </div>
@@ -492,7 +556,7 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
                          </div>
                        </div>
                        <div class="break"></div>
-                       
+
                     </section>
                 </div>
               <!-- End Contact Data -->
