--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <div class="portfolioImage">
                             <div class="image">
 								<a href="#raymarchingprimitives" class="btn btn-info">
-									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
+									<img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
                             </div>
                         </div>
                     </section>
@@ -485,11 +485,11 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
 				Business Card Game
                             </h1>
 			    <p>
-Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+currently filling this out
 </p><h6>
-Making it Juicy
+construction
 </h6><div class="break"></div><p>
-Vicious Orb is meant to be a very visceral game. It is a competitive action game, I want it to feel good. To do that, I have been spending a lot of time tweaking the feedback of the game. My goal is to make it so that every graphical and aural effect is scaled to the tension of the current game state. I've learned a lot in doing this. Getting to be the designer of the game as well as programming it has made me think more about what designers really need to make the games they want to make. This has also encouraged me to work on more small projects. I have been working on this in my spare time for a little while now, but I finished the first prototype in a few hours.
+construction
 			    </p>
                         </div>
                     </section>
@@ -500,7 +500,7 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
                     <section class="clearfix">
                         <div class="g6">
                             <div class="image">
-                                <img src="http://i.imgur.com/MJ6hmOk.jpg" alt="">
+                                <img src="http://i.imgur.com/i41kFq5.gif" alt="">
                             </div>
                         </div>
                         <div class="g4">
@@ -508,11 +508,11 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
 				Raymarching Primitives
                             </h1>
 			    <p>
-Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+Currently filling this out!
 </p><h6>
-Making it Juicy
+Currently filling this out!
 </h6><div class="break"></div><p>
-Vicious Orb is meant to be a very visceral game. It is a competitive action game, I want it to feel good. To do that, I have been spending a lot of time tweaking the feedback of the game. My goal is to make it so that every graphical and aural effect is scaled to the tension of the current game state. I've learned a lot in doing this. Getting to be the designer of the game as well as programming it has made me think more about what designers really need to make the games they want to make. This has also encouraged me to work on more small projects. I have been working on this in my spare time for a little while now, but I finished the first prototype in a few hours.
+Currently filling this out!
 			    </p>
                         </div>
                     </section>
