Centered the portfolio elements

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
-                <div id="portfolio">
+                <div class="portfolioContainer" id="portfolio">
                     <section class="clearfix">
                     	<div class="portfolioImage">
                             <div class="image">
