working on bus card portfolio description

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ In developing Ripples, we discovered that there are two distinct types of player
 				Vicious Orb
                             </h1>
 			    <p>
-Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com/">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
+Vicious Orb is a project that I am currently working on alone (hence the <a href="http://braid-game.com">Tim</a> sprites). Vicious orb is about leaping into the air, grabbing a ball made of a highly instable material, and blasting it at your friend before your feet touch the ground. Vicious orb is about playing basketball with a nuclear bomb. Vicious orb is what CERN scientists do during their lunch hour. In Vicious Orb I am trying to make a hilariously fun, competitive, local multiplayer game, becuase those are the kinds of games I like to play.
 </p><h6>
 Making it Juicy
 </h6><div class="break"></div><p>
@@ -485,11 +485,16 @@ Vicious Orb is meant to be a very visceral game. It is a competitive action game
 				Business Card Game
                             </h1>
 			    <p>
-currently filling this out
+In anticipation of GDC 2016, I was scrambling around for a business card idea. This would be my first personal business card, so I wanted to make it special. I wanted my business card to reflect my personality; my love of math, games, and little programs. I wanted the cards to have some kind of function or game, so that people recieving them might have more of a reason to not immediately discard them. I came across <a href="https://moo.com">Moo's</a> offer of up to fifty different business card backs for no extra charge, and knew that I needed to make some sort of randomly generated game.
 </p><h6>
-construction
+Graph Theory
 </h6><div class="break"></div><p>
-construction
+I got to thinking about the possible games one could fit on a business card, and decided an abstract puzzle sort of thing would be best given the strict restraints of the platform. A few facts from graph theory popped into my mind and, bam, there was a randomly generatable puzzle game. The types of graphs my program can generate are euler circuits, euler paths, and hamiltonian circuits, and the methods for generating those graphs are fairly simple. It all comes down to the number of connections between nodes, here's how it works: <br>
+<ul>
+    <li>
+        <p>something</p>
+    <li>
+</ul>
 			    </p>
                         </div>
                     </section>
@@ -513,6 +518,7 @@ Currently filling this out!
 Currently filling this out!
 </h6><div class="break"></div><p>
 Currently filling this out!
+<li>
 			    </p>
                         </div>
                     </section>
